--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.3",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
@@ -67,8 +67,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "baseline-browser-mapping": "^2.9.4",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
